--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URI=mongodb+srv://asifhussain:asif5115@cluster0.tyqvxzo.mongodb.net/ecommerce?
+MONGO_URI=mongodb+srv://asifhussain5115:asif5115@cluster0.tyqvxzo.mongodb.net/test?
